style.css
@font-face {
  font-family: "DinPro";
  src: local(DinPro), url("./brand/01/DINPro.otf") format("opentype");
}

@font-face {
  font-family: "BebasNeueRegular";
  src: local(BebasNeueRegular),
    url("./brand/01/BebasNeueRegular.otf") format("opentype");
}

.dark-mode {
  background-color: #1e2023;
  color: white;
}

.body {
  font-family: BebasNeueRegular;
  /* color: #02bec4; */
  font-size: 20px;
  font-style: normal;
  font-weight: normal;
  letter-spacing: 0.02em;
  line-height: 150%;
  color: #4b9ad3;
  text-decoration: none;
  /* background: white; */
  overflow-x: hidden;
}

.button {
  background-color: #dc4c1a;
  border: 1px solid black;
  border-color: black;
  color: white;
  padding: 3px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 5px 2px;
  cursor: pointer;
  border-radius: 25px;
}

.small {
  color: #263a8c;
  line-height: 120%;
  font-size: 14px;
  font-family: DinPro;
  color: white;
}

.content {
  margin: auto;
  padding: 30px;
}

h1 {
  font-family: BebasNeueRegular;
  font-size: 35px;
  color: #02bec4;
  margin-right: 1em;
  margin-top: 2em;
  margin-bottom: 0.5em;
  margin-left: 1em;
}

h2 {
  font-size: 21px;
  /* color: #263a8c; */
  margin-right: 1em;
  margin-bottom: 0.5em;
  margin-left: 1.5em;
  font-family: DinPro;
  color: #2a3987;
}

h3 {
  font-size: 15px;
  /* color: #263a8c; */
  margin-right: 1em;
  margin-bottom: 0.5em;
  margin-left: 1.5em;
  font-family: DinPro;
  color: #2a3987;
}

h2 a {
  /* color: #263a8c; */
}

.image-list-small .details h3 a {
  font-size: 8px;
  color: #6fbce5;
}

.image-list-small .details h4 a {
  color: #f2f2f2;
  font-size: 8px;
  color: #424242;
}

.centerimg {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
}

.smallimg {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
  width: 100%;
}

html {
  scroll-behavior: smooth;
}

header {
  position: relative;
  width: 100%;
  height: 60%;
  overflow-y: hidden;
}

.em-wide {
  letter-spacing: 0.2em;
  display: inline;
}

a {
  text-decoration: none;
  color: #188ad5;
  font-weight: 500;
  text-decoration: none;
}

img {
  border-radius: 1px;
  max-width: 100%;
  text-align: center;
}

.img2 {
  border-radius: 8px;
  max-width: 200px;
}

div.a {
  font-size: 12px;
  line-height: 160%;
  text-decoration: none;
}

* {
  box-sizing: border-box !important;
}

/* #video-container {
  max-width: 100%;
  margin: 0 auto;
}

video {
  width: 100%;
  height: auto;
}

@media (max-width: 768px) {
  #video-container {
    max-width: 50%;
  }
} */

.video-container {
  max-width: 100%;
}

@media (min-width: 992px) {
  .video-container video {
    width: 50%;
  }
}

